src/test/resources/semantic/correct/TC_BASIC_HERENCIA_METODOS.ru
/? CORRECTO: SEMANTICO - DECLARACIONES
struct A{


}

impl A{
    .(){
        
    }
    st fn m1()->Int{

    }
    fn m2(Int a, Str b)->void{

    }
    fn m3           (Bool a, Char c)->Str{

    }
}

impl B{
    .(){

    }
    fn m2(Int a, Str b)->void{
        (IO.out_str("f_"));
    }
}
struct B:A{

}
impl C{
    .(){
        
    }
    fn m3           (Bool a, Char c)->Str{
        (IO.out_int(num));
        (IO.out_str("="));
    }
    fn m2(Int a,Str b)->void{
        Int c;
        (IO.out_int(1));
        a=1;
    }
}

struct C:B{

}

struct D:C{

}

impl D{
    .(){
        
    }
    st fn m4()->void{
        Bool booleano;
        Str hola;
    }
    fn m5()->void{
        Int iter;
    }
}

start{

}
